fixed align cards

--- a/css/about.css
+++ b/css/about.css
@@ -156,7 +156,7 @@ margin-left: auto;
 @media screen and (max-width: 600px) {
     
     .bannerAbout{
-        background-attachment: scroll;
+        background-attachment: scroll !important;
     }
     
     .avatarCEO img{
